# ChatApp

chatclient/: ChatClient.pro
chatclient/components/: components.pro  qtmaterialtabs.cpp
chatclient/llfcchat/: ChatItemBase.cpp  ChatView.cpp  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  llfcchat.pro  logindialog.cpp  logindialog.ui  main.cpp  registerdialog.cpp  registerdialog.ui  resetdialog.cpp  resetdialog.ui  statelabel.cpp  statelabel.h  tcpmgr.cpp
chatclient/llfcchat/style/: stylesheet.qss
server/ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServer.cpp  ConfigMgr.cpp  Loger.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  config.ini  const.h
server/GateServer/: CMakeLists.txt  GateServer.cpp  HttpConnection.cpp  RedisMgr.h  const.h
server/StatusServer/: CMakeLists.txt  Loger.h  RedisMgr.h  StatusServer.cpp  const.h
server/VarifyServer/: config.json
